# ballotbot

./: .gitignore  Cargo.toml  Justfile  README.md
migrations/: 20220905182917_voting_session.sql  20220905182925_session_ballot_options.sql  20220905182932_session_participants.sql  20220905182938_session_votes.sql
src/: condorcet_voting.rs  main.rs  quadratic_voting.rs  ranked_choice_voting.rs
