[package]
name = "ballotbot"
version = "1.0.0"
edition = "2024"

[dependencies]
log = "0.4"
nalgebra = "0.33"
humantime = "2"
serenity = "0.12.4"
fern = { version = "0.7", features = ["colored"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
